--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroui/theme": "^2.4.20",
     "@heroui/tooltip": "^2.2.21",
     "@prisma/client": "^6.15.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
@@ -26,9 +27,11 @@
     "motion": "^12.23.12",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
+    "openai": "^5.16.0",
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "replicate": "^1.1.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
