--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.878.0",
     "@clerk/nextjs": "^6.31.5",
     "@heroui/react": "^2.8.2",
     "@heroui/system": "^2.4.20",
@@ -20,8 +21,10 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "assemblyai": "^4.15.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "elevenlabs": "^1.59.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
