--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@remotion/cli": "^4.0.340",
+    "@remotion/lambda": "4.0.340",
+    "@remotion/player": "4.0.340",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
