--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "19.1.0",
     "replicate": "^1.1.0",
     "sonner": "^2.0.7",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
